# ProgramingEducation_V2

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  My YouTube Library.txt  dev-start.sh  docker-compose.dev.yml  docker-compose.judge0.yml  docker-compose.prod.yml  judge0.conf.example  zeabur.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 29ec153bbf77_create_users_table.py  a1b2c3d4e5f6_create_chat_tables.py  a7b8c9d0e1f2_create_reflections_table.py  b2c3d4e5f6a7_enable_pgvector_and_create_documents.py  (+22 more)
backend/api/: deps.py
backend/core/: auth.py  config.py  database.py  dev_mode.py  errors.py  llm_params.py  rate_limit.py  redis.py
backend/models/: __init__.py  assignment.py  chat.py  classroom.py  code_file.py  coding_event.py  concept.py  learning.py  mastery.py  quiz.py  reflection.py  student_profile.py  unit_content_staging.py  user.py
backend/scripts/: apply_corrections.py  fetch_playlist_metadata.py  flag_transcripts.py  generate_unit_content.py  generate_unit_questions.py  ingest_transcripts_rag.py  patch_video_metadata.py  promote_unit_content.py  rereview_questions.py  seed_fake_students.py  transcribe_videos.py  verify_rag_ingest.py  verify_rag_retrieve.py
backend/services/: chat.py  chat_kickoff.py  classroom.py  dev_quiz_tools.py  dev_tools.py  identity.py  judge0.py  student_profile.py  user.py  workspace_files.py
backend/tests/: conftest.py  feedback_factories.py  helpers.py  test_analytics_aggregate.py  test_analytics_events.py  test_assignment_submissions.py  test_assignments.py  test_auth.py  test_batch_generator.py  test_chat.py  test_chat_kickoff.py  test_class_membership_route.py  test_classes_route.py  test_code_files.py  test_comprehension_epl.py  test_comprehension_epl_route.py  test_comprehension_mastery_hook.py  test_comprehension_mastery_integration.py  test_comprehension_predict.py  test_comprehension_predict_route.py  test_comprehension_route.py  test_comprehension_trigger.py  test_comprehension_trigger_route.py  test_comprehension_variation.py  test_comprehension_variation_route.py  test_concept_graph.py  test_content_generator.py  test_cors.py  test_dashboard.py  test_dashboard_mastery.py  test_dashboard_timeline.py  test_decision.py  test_dev_mode.py  test_dev_quiz_tools.py  test_dev_seed.py  test_dev_tools.py  test_diagnosis.py  test_dialogue_act.py  test_errors.py  test_evidence.py  (+42 more)
(+435 files in other folders)
