[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "programing-education-backend"
version = "0.1.0"
description = "AI-powered C++ programming education platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.18,<1",  # 5-5 作業附件 multipart 上傳
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "redis>=5.2,<6",
    "python-dotenv>=1.0,<2",
    "authlib>=1.3,<2",
    "cryptography>=42,<45",
    "PyJWT>=2.8,<3",
    "openai>=1.50,<3",
    "httpx>=0.28,<1",
    "pgvector>=0.3,<1",
    "alembic>=1.13,<2",
    # 2-1 RAG：LlamaIndex + pgvector 整合（PGVectorStore 用同步 psycopg2 初始化）
    "llama-index-core>=0.13,<1",
    "llama-index-embeddings-openai>=0.5,<1",
    "llama-index-vector-stores-postgres>=0.5,<1",
    "psycopg2-binary>=2.9,<3",
]

# backend 是 application（flat layout，模組在根層），顯式列 packages 讓
# `pip install -e .` 可用（tech-debt：hatchling 預設找不到 wheel target）
[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models", "services", "scripts"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
